--- a/token_contracts/arca/package.json
+++ b/token_contracts/arca/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "publish": "ts-node scripts/index.ts publish",
-    "upgrade": "ts-node scripts/index.ts upgrade"
+    "upgrade": "ts-node scripts/index.ts upgrade 0x75351cdf31df6b4d288a0d0fec6c161a994e7b8d4097ce23f83baa2d51870d0b 0xa49487d022309ea89514d994deb59a216b8ea268652af01daaee2d93a877afd0"
   },
   "author": "",
   "license": "ISC",
