--- a/token_contracts/arca/package.json
+++ b/token_contracts/arca/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "publish": "ts-node scripts/index.ts publish",
-    "upgrade": "ts-node scripts/index.ts upgrade 0x75351cdf31df6b4d288a0d0fec6c161a994e7b8d4097ce23f83baa2d51870d0b 0xa49487d022309ea89514d994deb59a216b8ea268652af01daaee2d93a877afd0"
+    "upgrade": "ts-node scripts/index.ts upgrade 0x75351cdf31df6b4d288a0d0fec6c161a994e7b8d4097ce23f83baa2d51870d0b 0xa49487d022309ea89514d994deb59a216b8ea268652af01daaee2d93a877afd0",
+    "util-suiAddress": "ts-node scripts/utils.ts suiAddress"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +17,11 @@
     "@ledgerhq/hw-transport-node-hid-singleton": "^6.28.12",
     "@mysten/ledgerjs-hw-app-sui": "^0.2.0",
     "@mysten/sui.js": "^0.34.1",
+    "@types/elliptic": "^6.4.18",
     "@types/node": "^20.2.5",
     "@types/tmp": "^0.2.3",
     "dotenv": "^16.1.3",
+    "elliptic": "^6.5.4",
     "tmp": "^0.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
